STYLE Fix Background Bleed
Fixed the background bleed issue by switching from a container for
all the sections to a wrapper for each section.

--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@ body{
     margin: 0;
 }
 
-.container  {
+.wrapper  {
     width: 80vw;
-    max-width: 750px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 0;
     font-family: 'Roboto', sans-serif;
